# cets-mmcif

./: .env_template  .gitignore  README.md  mmCIF_require_items_CETS_v1_20251201.xlsx  mmCIF_required_items_CETS_v1_20251201.xlsx  pyproject.toml
cets_mmcif/: cli.py  conversion.py  settings.py  validation.py
cets_mmcif/entities/: experiment.py  image_processing.py  image_recording.py  imaging.py  imaging_optics.py  map.py  reconstruction.py  software.py  tomography.py  tomography_specimen.py
examples/CETS/: EMPIAR-12104.json
examples/mmCIF/: EMPIAR-12104.cif
